require util for inheritance in ocpua-client

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^2.0.0-rc.6",
     "node-opcua": "0.0.54",
     "q": "^1.4.1",
-    "should": "^8.3.1"
+    "should": "^8.3.1",
+    "util": "^0.10.3"
   }
 }
