--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.0.0-rc.6",
-    "node-opcua": "0.0.54",
+    "debug": "^2.2.0",
+    "node-opcua": "0.0.56",
     "q": "^1.4.1",
-    "should": "^8.3.1",
+    "should": "^10.0.0",
     "util": "^0.10.3"
   },
   "directories": {
