--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app helps working with node-opcua. Especially, it simplifies the creation of OPC UA servers and the work with OPC UA variables client-side.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "dominik serve",
   "license": "MIT",
@@ -12,10 +12,10 @@
     "async": "^2.6.0",
     "bluebird": "^3.5.1",
     "debug": "^3.1.0",
-    "mocha": "^4.0.1",
-    "node-opcua": "0.0.65",
+    "mocha": "^4.1.0",
+    "node-opcua": "^0.1.1-0",
     "q": "^2.0.3",
-    "should": "^13.1.3",
+    "should": "^13.2.0",
     "util": "^0.10.3"
   },
   "directories": {
